added a FormatTag into error output

--- a/sox.1
+++ b/sox.1
@@ -719,5 +719,5 @@ implied warranty.
 The version of Sox that accompanies this manual page is support by 
 Chris Bagwell (cbagwell@sprynet.com).  Please refer any questions 
 regarding it to this address.  You may obtain the latest version at the 
-the web site http://home.sprynet.com/sprynet/cbagwell/projects.html
+the web site http://home.sprynet.com/~cbagwell/projects.html
 
