--- a/sox.1
+++ b/sox.1
@@ -9,9 +9,9 @@
 .if t .sp .5v
 .if n .sp
 ..
-.TH SOX 1 "September 6, 1998"
+.TH SoX 1 "September 6, 1998"
 .SH NAME
-sox \- SOund eXchange : universal sound sample translator
+sox \- Sound eXchange : universal sound sample translator
 .SH SYNOPSIS
 .B sox \fIinfile outfile \fB
 .br
@@ -280,7 +280,7 @@ the beginning of the sample and the sample value.
 Values are normalized so that the maximum and minimum
 are 1.00 and -1.00.  This file format can be used to
 create data files for external programs such as
-FFT analyzers or graph routines.  SOX can also convert
+FFT analyzers or graph routines.  SoX can also convert
 a file in this format back into one of the other file
 formats.
 .TP 10
