--- a/README
+++ b/README
@@ -46,6 +46,7 @@ The sound effects include:
   o Apply a reverb effect
   o Reverse the sound samples (to search for Satanic messages ;-)
   o Convert from mono to stereo
+  o Swap stereo channels
   o Display general stats on a sound sample
   o Add the world-famous Fender Vibro-Champ effect
 
