--- a/README
+++ b/README
@@ -57,36 +57,30 @@ The 'resample' and 'polyphase' effect does high-grade signal rate
 changes using real signal theory.  Yes, it's very slow.  There seems
 to be a small problem with aliasing with 'resample' currently.
 
-More big news!  Sample loops are now supported in a few
-file formats: SMP and AIFF.  WAV and VOC needs it.  I don't know
-what other formats actually know about sampler notes & loops.
-(To make a loop, you need a waveform editor that knows about
-them and has special features.)
-
 History:
 
 This is the 12th release, Patchlevel 16 of the Sound Tools.
-Sox was originally written and maintained by Lance Norskog but
+SoX was originally written and maintained by Lance Norskog but
 unfortunetly he has stopped maintaining it since 1995.  I, Chris
 Bagwell (cbagwell@sprynet.com), have started maintaining it since
-1996 to the present.  Lance may take supporting it back up in the future
-but until that time I will keep pushing its development forward.
+1996 to the present.
 
 Caveats:
+
 SoX is intended as the Swiss Army knife of sound processing tools.  It 
 doesn't do anything very well, but sooner or later it comes in very handy.
 SoX is really only usable day-to-day if you hide the wacky options with 
 one-line shell scripts.
 
 Installing:
+
 Unless your using a precompiled binary version, you will need to compile
 SoX as described in the INSTALL file.  Please read that file for further
 instructions.
 
 Now, read TIPS, CHEAT.eft and CHEAT.  These give a background on how
 SoX deals with sound files and how to convert this format
-to that format, and apply various effects with examples for the most 
-popular formats.
+to that format, and apply various effects.
 
 SoX uses file suffices to determine the nature of a sound sample file.
 If it finds the suffix in its list, it uses the appropriate read
@@ -96,7 +90,7 @@ page for more information.
 
 SoX has an auto-detect feature that attempts to figure out
 the nature of an unmarked sound sample.  It works very well.
-This is the 'auto' file format.
+This feature is used if you specify '-t auto' for the file type.
 
 I hope to inspire the creation of a common base of sound processing
 tools for computer multimedia work, similar to the PBM toolkit for 
@@ -144,12 +138,6 @@ by you the user.  Thank you very much for making SoX a success!
 			AIFF Loop/MIDI support
 		David Sanderson		dws@ssec.wisc.edu
 			AIX3.1 fixes
-			(Note that to my knowledge AIX on RS/6000s has
-			NO SUPPORT for playing any sort of sound file,
-			so please don't write to me any more to ask
-			"how do I play sound files on my AIX box".  I
-			ported sox to AIX solely to use it to translate
-			between sound file formats.)
 		Glenn Lewis		glewis@pcocd2.intel.com
 			AIFF chunking fixes
 		Brian Campbell		brianc@quantum.qnx.com
