--- a/sox.1
+++ b/sox.1
@@ -95,7 +95,7 @@ sox \- Sound eXchange : universal sound sample translator
 .br
 	stat [ \fIdebug\fB | \fI-v\fB ]
 .br
-	swap [ 1 2 3 4 ]
+	swap [ \fI1 2 3 4\fB ]
 .br
 	vibro \fIspeed \fB[ \fIdepth\fB ]
 .SH DESCRIPTION
@@ -676,7 +676,7 @@ sound file from the internal buffer that is in 32-bit signed PCM data.
 This is mainly only of use in tracking down endian problems that
 creep in to sox on cross-platform versions.
 .TP 10
-swap [1 2 3 4]
+swap [ \fI1 2 3 4\fB ]
 Swap channels in multi-channel sound files.  In files with more than 2
 channels you may specify the order that the channels should be rearranged
 in.
@@ -734,5 +734,5 @@ implied warranty.
 The version of Sox that accompanies this manual page is support by 
 Chris Bagwell (cbagwell@sprynet.com).  Please refer any questions 
 regarding it to this address.  You may obtain the latest version at the 
-the web site http://home.sprynet.com/~cbagwell/projects.html
+the web site http://home.sprynet.com/~cbagwell/sox.html
 
