--- a/play.1
+++ b/play.1
@@ -2,43 +2,67 @@
 .\" NAME should be all caps, SECTION should be 1-8, maybe w/ subsection
 .\" other parms are allowed: see man(7), man(1)
 .SH NAME
-play \- play any sound file 
+play \- play any sound file to audio device
+.P
+rec  \- record audio to any sound file format
 .SH SYNOPSIS
 .B play
 .I "[fopts] infile [effect]"
+.P
+.B rec
+.I "[fopts] outfile [effect]"
 .SH "DESCRIPTION"
 This manual page documents briefly the
-.BR play 
+.B play and rec
 command.
 .PP
 .B play
-is a program that allows you to play different types of sound files. It is 
+and
+.B rec
+are programs that allows you to play and record different types of sound files. It is 
 a frontend to the more general sox package. Normally the play command 
 will detect the type and other parameters of the soundfile. If it can't do 
-so, the parametes can be changed through options.
+so, the parameters can be changed through options.
 .SH OPTIONS
 A summary of common options are included below.
-For a complete description for options and supported formats, see 
+For a complete description of options and thier values, see 
 the 
 .B sox(1) 
 man page.
 .TP
-.B \-h 
-Show summary of options.
-.TP
-.B \-r rate
-Define the samplerate of the playback.
-.TP
-.B \-v volume
-Change the playback Volume.
-.TP
-.B \-c channels
+.B \-c [channels], \-\-channels=[channels]
 Define the number of channels of the file.
 .TP
-.B \-d device
+.B \-d [device], \-\-device=[device]
 Specify a different device to play the sound file to.
 .TP
-Other options and a description of effects are described in the sox man page.
+.B \-f [format], \-\-format=[format]
+Specifies bit format of sample. One of s, u, U, A, a, or g.
+.TP
+.B \-r [rate], \-\-rate=[rate]
+Define the samplerate of the audio data.
+.TP
+.B \-s [size], \-\-size=[size]
+interpret size of sample.  One of b, w, l, f, d, or D.
+.TP
+.B \-t [type], \-\-type=[type]
+Specifies audio file format to use.  Useful if it can not be determined
+on its own.
+.TP
+.B \-v [volume], \-\-volume=[volume]
+Change the audio volume
+.TP
+.B \-x , \-\-xinu
+Reverse the byte order of the sample (only works with 16 and 32-bit data).
+.TP
+.B \-h, \-\-help
+Show summary of options.
+.TP
+.B \-\-version
+Show version of play/rec.
+
+.TP
+Description of effects are described in the sox man page.
 
 .SH "SEE ALSO"
 
