--- a/sox.1
+++ b/sox.1
@@ -225,7 +225,7 @@ File formats which have headers are checked,
 if that header doesn't seem right,
 the program exits with an appropriate message.
 Currently, raw (no header) binary and textual data, 
-Amiga 8SVX, Apple/SGI AIFF, SPARC .AU (w/header), NeXT .SND,
+Amiga 8SVX, Apple/SGI AIFF, SPARC .AU (w/header), AVR, NeXT .SND,
 CD-R, CVSD, GSM 06.10, Mac HCOM, Sound Tools MAUD, OSS device drivers,
 Turtle Beach .SMP, Sound Blaster, Sndtool, and Sounder,
 Sun Audio device driver,
@@ -256,6 +256,12 @@ The latter are probably original SUN u-law 8000 hz samples.
 These can be dealt with using the 
 .B .ul
 format (see below).
+.TP 10
+.B .avr
+Audio Visual Research
+.br
+The AVR format is produced by a number of commercial packages
+on the Mac.
 .TP 10
 .B .cdr
 CD-R
