--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,14 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma.
 
+sox-12.17
+---------
+  o Added AVR handler from Jan Paul Schmidt.
+  o SoX will no longer write to files that exists.  This will keep
+    it from deleting files when a user mistakenly types "sox *.wav".
+  o Added new compander effect from Nick Bailey.  Nice general purpose
+    filter.
+
 sox-12.16
 ---------
   
