Commenting on new need for force overwrite option.

--- a/TODO
+++ b/TODO
@@ -14,12 +14,12 @@ all patches to cbagwell@sprynet.com.
 
   o Add GSM support to WAV format.  Goes with the above but used
     most often.
+
+  o Add option that allows one to force overwriting to an output
+    file (now that it defaults to not allowing this).
  
   o highpass and lowpass filters don't let you specify the cut
     of freq.  Need some improvements to these filters.
-
-  o Grab latest stand alone version of resample and replace Sox's
-    outdated version.
 
   o Create a version of OSS and Sun driver that can play and record from the
     same device in duplex.
